# Vortex

./: .gitignore  CMakeLists.txt  README.md
include/: Application.h
include/3rd/: vk_mem_alloc.h
include/Assets/: Material.h  Mesh.h  Texture.h
include/Core/: Command.h  Context.h  Descriptor.h  ImGuiManager.h  Inputs.h  Pipeline.h  RenderPass.h  Renderer.h  Swapchain.h  Window.h
include/Scene/: Camera.h  Light.h  Renderable.h  Scene.h  Transform.h  UniformBuffer.h
shaders/: pbr.frag  pbr.frag.spv  pbr.vert  pbr.vert.spv
src/: Application.cpp
src/Assets/: Material.cpp  Mesh.cpp  Texture.cpp
src/Core/: Command.cpp  Context.cpp  Descriptor.cpp  ImGuiManager.cpp  Inputs.cpp  Pipeline.cpp  RenderPass.cpp  Renderer.cpp  Swapchain.cpp  VMAImpl.cpp  Window.cpp
src/Scene/: Scene.cpp
test/: vortex.cpp
